--- a/lesson1/homework.ipynb
+++ b/lesson1/homework.ipynb
@@ -54,7 +54,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.8.9"
+   "version": "3.8.9 (default, Oct 26 2021, 07:25:54) \n[Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
