--- a/lesson1/first_programm.ipynb
+++ b/lesson1/first_programm.ipynb
@@ -11,6 +11,25 @@
     "    while(b>0):b=b-i    \t\n",
     "    if b==0:print(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_var = 5\n",
+    "second_var = 5\n",
+    "print(first_var == second_var)"
+   ]
   }
  ],
  "metadata": {
@@ -20,8 +39,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2 (main, Feb  2 2022, 08:42:42) [Clang 13.0.0 (clang-1300.0.29.3)]"
   },
   "orig_nbformat": 4,
   "vscode": {
