--- a/list.ipynb
+++ b/list.ipynb
@@ -2,27 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[7, 5, 5, 4, 3, 5, 4, 5, 2]\n",
-      "[2, 3, 4, 4, 5, 5, 5, 5, 7]\n",
-      "[7, 5, 5, 5, 5, 4, 4, 3, 2]\n"
+      "[5, 4, 5]\n",
+      "2\n"
      ]
     }
    ],
    "source": [
     "films = ['Люди в черном: Интернэшнл', 'Тайная жизнь домашних животных-2', 'История игрушек 4' ]\n",
-    "score = [7,5,5,4,3,5,4,5,2]\n",
-    "print(score)\n",
-    "score.sort()\n",
-    "print(score)\n",
-    "score.reverse()\n",
-    "print(score)"
+    "score = [5,5,4,3,5,4,5,2]\n",
+    "print(score[0:6:2])\n",
+    "num=score.index(4)\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b']\n"
+     ]
+    }
+   ],
+   "source": [
+    "films = ['a','c','b']\n",
+    "\n",
+    "films.sort()\n",
+    "del(films[-1])\n",
+    "print(films)"
    ]
   },
   {
@@ -172,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9 (default, Oct 26 2021, 07:25:54) \n[Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4,
   "vscode": {
