--- a/facts.ipynb
+++ b/facts.ipynb
@@ -11,13 +11,78 @@
     "   'У коал отпечатки пальцев похожи на человеческие.',\n",
     "   'Белые медведи-левши.']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🐍 is 💚\n"
+     ]
+    }
+   ],
+   "source": [
+    "import emoji\n",
+    "print(emoji.emojize(':snake: is :green_heart:',language=\"alias\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting emoji\n",
+      "  Downloading emoji-2.2.0.tar.gz (240 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m240.9/240.9 kB\u001b[0m \u001b[31m1.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hBuilding wheels for collected packages: emoji\n",
+      "  Building wheel for emoji (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for emoji: filename=emoji-2.2.0-py3-none-any.whl size=234912 sha256=5301b76a0b811f8796f0ff1f57bf10ef8f3acbfdcc2d3e6638ba79ea9e32f02e\n",
+      "  Stored in directory: /Users/pattycha/Library/Caches/pip/wheels/80/20/48/a9171ff16fe85966efc66492a9aed0acabb17e96c35f696dbf\n",
+      "Successfully built emoji\n",
+      "Installing collected packages: emoji\n",
+      "Successfully installed emoji-2.2.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "python3 -m pip install emoji"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "379f48a0a2264dcd18e018f59e5f6957f70a86f867a1be205da3494d0ccba0ca"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
