--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -24,6 +24,20 @@
     "else:\n",
     "    print(f\"А есть ли {word}?\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "films_dict = {\n",
+    "    'Начало': 'Леонардо Ди Каприо', \n",
+    "    'Пираты Карибского моря': 'Джонни Депп',\n",
+    "    'Миссия невыполнима': 'Том Круз',\n",
+    "    'Драйв':'Раян Гослинг'\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
