--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -27,17 +27,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Агент 007'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/pattycha/code2035-1/lesson.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pattycha/code2035-1/lesson.ipynb#W1sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m film \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mКакой фильм вы собираетесь смотреть? \u001b[39m\u001b[39m'\u001b[39m) \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pattycha/code2035-1/lesson.ipynb#W1sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m favor\u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mРаян Гослинг\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/pattycha/code2035-1/lesson.ipynb#W1sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mif\u001b[39;00m films_dict[film] \u001b[39m==\u001b[39m favor: \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mстоит посмотреть\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pattycha/code2035-1/lesson.ipynb#W1sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39melse\u001b[39;00m: \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mНе буду)\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Агент 007'"
+     ]
+    }
+   ],
    "source": [
     "films_dict = {\n",
     "    'Начало': 'Леонардо Ди Каприо', \n",
     "    'Пираты Карибского моря': 'Джонни Депп',\n",
     "    'Миссия невыполнима': 'Том Круз',\n",
     "    'Драйв':'Раян Гослинг'\n",
-    "}"
+    "}\n",
+    "film = input('Какой фильм вы собираетесь смотреть? ') \n",
+    "favor= \"Раян Гослинг\"\n",
+    "if films_dict[film] == favor: print(\"стоит посмотреть\")\n",
+    "else: print(\"Не буду)\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
