--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -27,14 +27,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Нет такого фильма\n"
+      "{'яблоко': 'apple', 'муравей': 'ant', 'любимый': 'darling', 'кот': 'cat', 'мир': 'world', 'идти': 'go', 'Начало': 'Леонардо Ди Каприо', 'Пираты Карибского моря': 'Джонни Депп', 'Миссия невыполнима': 'Том Круз', 'Драйв': 'Раян Гослинг'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "films_dict = {\n",
+    "    'Начало': 'Леонардо Ди Каприо', \n",
+    "    'Пираты Карибского моря': 'Джонни Депп',\n",
+    "    'Миссия невыполнима': 'Том Круз',\n",
+    "    'Драйв':'Раян Гослинг'\n",
+    "}\n",
+    "ru_en={\"яблоко\":\"apple\",'муравей':\"ant\",\n",
+    "    \"любимый\":\"darling\",\"кот\":\"cat\",\n",
+    "    \"мир\":'world',\"идти\":\"go\"\n",
+    "}\n",
+    "ru_en.update(films_dict)\n",
+    "print(ru_en)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Леонардо Ди Каприо\n"
      ]
     }
    ],
@@ -45,6 +74,7 @@
     "    'Миссия невыполнима': 'Том Круз',\n",
     "    'Драйв':'Раян Гослинг'\n",
     "}\n",
+    "#print(films_dict[\"Начало\"])\n",
     "film = input('Какой фильм вы собираетесь смотреть? ') \n",
     "favor= \"Раян Гослинг\"\n",
     "if film in films_dict:\n",
@@ -55,9 +85,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "opros = [\n",
+    "    {\"q\":\"Сколько персонажей в Марвеле\",'var':[\"10\",\"34\",\"250\",\"474\"],'a':3},\n",
+    "    {'q':\"Как появился человек паук?\",\"var\":[\"отравился едой\",\"укусил паук\",'упал с лестницы'],'a':1},\n",
+    "    {'q':\"Кто был отцом Питера Квилла из Стражей Галактики?\",\"var\":['планета',\"медуза\",\"человек муравей\",\"самолет\"],\"a\":0}\n",
+    "]"
+   ]
   }
  ],
  "metadata": {
