--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -86,15 +86,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Сколько персонажей в Марвеле?\n",
+      "\t1. 10\n",
+      "\t2. 34\n",
+      "\t3. 250\n",
+      "\t4. 474\n",
+      "Как появился человек паук?\n",
+      "\t1. отравился едой\n",
+      "\t2. укусил паук\n",
+      "\t3. упал с лестницы\n",
+      "Кто был отцом Питера Квилла из Стражей Галактики?\n",
+      "\t1. планета\n",
+      "\t2. медуза\n",
+      "\t3. человек муравей\n",
+      "\t4. самолет\n"
+     ]
+    }
+   ],
    "source": [
     "opros = [\n",
-    "    {\"q\":\"Сколько персонажей в Марвеле\",'var':[\"10\",\"34\",\"250\",\"474\"],'a':3},\n",
+    "    {\"q\":\"Сколько персонажей в Марвеле?\",'var':[\"10\",\"34\",\"250\",\"474\"],'a':3},\n",
     "    {'q':\"Как появился человек паук?\",\"var\":[\"отравился едой\",\"укусил паук\",'упал с лестницы'],'a':1},\n",
     "    {'q':\"Кто был отцом Питера Квилла из Стражей Галактики?\",\"var\":['планета',\"медуза\",\"человек муравей\",\"самолет\"],\"a\":0}\n",
-    "]"
+    "]\n",
+    "score = 0\n",
+    "for i in opros:\n",
+    "    print(i['q'])\n",
+    "    num=1\n",
+    "    for j in i['var']:\n",
+    "        print(f\"\\t{num}. {j}\")\n",
+    "        num=num+1\n",
+    "    ans=int(input(\"Ваш ответ?\"))-1\n",
+    "    if ans==i[\"a\"]:\n",
+    "        score+=1\n",
+    "        print('Верно! Ваш счет: {score} очков')\n",
+    "    else:\n",
+    "        print(\"Ошибка!\")\n"
    ]
   }
  ],
