--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -98,15 +98,19 @@
       "\t2. 34\n",
       "\t3. 250\n",
       "\t4. 474\n",
+      "Ошибка!\n",
       "Как появился человек паук?\n",
       "\t1. отравился едой\n",
       "\t2. укусил паук\n",
       "\t3. упал с лестницы\n",
+      "Ошибка!\n",
       "Кто был отцом Питера Квилла из Стражей Галактики?\n",
       "\t1. планета\n",
       "\t2. медуза\n",
       "\t3. человек муравей\n",
-      "\t4. самолет\n"
+      "\t4. самолет\n",
+      "Верно! Ваш счет: 1 очков\n",
+      "Попробуйте еще раз\n"
      ]
     }
    ],
@@ -126,9 +130,11 @@
     "    ans=int(input(\"Ваш ответ?\"))-1\n",
     "    if ans==i[\"a\"]:\n",
     "        score+=1\n",
-    "        print('Верно! Ваш счет: {score} очков')\n",
+    "        print(f'Верно! Ваш счет: {score} очков')\n",
     "    else:\n",
-    "        print(\"Ошибка!\")\n"
+    "        print(\"Ошибка!\")\n",
+    "if score>2:print(\"Вы победили!\")\n",
+    "else: print(\"Попробуйте еще раз\")"
    ]
   }
  ],
