--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -2,139 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "А есть ли суслик?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ru_en={\"яблоко\":\"apple\",'муравей':\"ant\",\n",
-    "    \"любимый\":\"darling\",\"кот\":\"cat\",\n",
-    "    \"мир\":'world',\"идти\":\"go\"\n",
-    "}\n",
-    "word=input(\"Введите слово:\")\n",
-    "if word in ru_en:\n",
-    "    print(f\"Перевод слова '{word}':{ru_en[word]}\")\n",
-    "else:\n",
-    "    print(f\"А есть ли {word}?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'яблоко': 'apple', 'муравей': 'ant', 'любимый': 'darling', 'кот': 'cat', 'мир': 'world', 'идти': 'go', 'Начало': 'Леонардо Ди Каприо', 'Пираты Карибского моря': 'Джонни Депп', 'Миссия невыполнима': 'Том Круз', 'Драйв': 'Раян Гослинг'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "films_dict = {\n",
-    "    'Начало': 'Леонардо Ди Каприо', \n",
-    "    'Пираты Карибского моря': 'Джонни Депп',\n",
-    "    'Миссия невыполнима': 'Том Круз',\n",
-    "    'Драйв':'Раян Гослинг'\n",
-    "}\n",
-    "ru_en={\"яблоко\":\"apple\",'муравей':\"ant\",\n",
-    "    \"любимый\":\"darling\",\"кот\":\"cat\",\n",
-    "    \"мир\":'world',\"идти\":\"go\"\n",
-    "}\n",
-    "ru_en.update(films_dict)\n",
-    "print(ru_en)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Леонардо Ди Каприо\n"
-     ]
-    }
-   ],
-   "source": [
-    "films_dict = {\n",
-    "    'Начало': 'Леонардо Ди Каприо', \n",
-    "    'Пираты Карибского моря': 'Джонни Депп',\n",
-    "    'Миссия невыполнима': 'Том Круз',\n",
-    "    'Драйв':'Раян Гослинг'\n",
-    "}\n",
-    "#print(films_dict[\"Начало\"])\n",
-    "film = input('Какой фильм вы собираетесь смотреть? ') \n",
-    "favor= \"Раян Гослинг\"\n",
-    "if film in films_dict:\n",
-    "    if films_dict[film] == favor: print(\"стоит посмотреть\")\n",
-    "    else: print(\"Не буду)\")\n",
-    "else: \n",
-    "    print(\"Нет такого фильма\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Сколько персонажей в Марвеле?\n",
-      "\t1. 10\n",
-      "\t2. 34\n",
-      "\t3. 250\n",
-      "\t4. 474\n",
-      "Ошибка!\n",
-      "Как появился человек паук?\n",
-      "\t1. отравился едой\n",
-      "\t2. укусил паук\n",
-      "\t3. упал с лестницы\n",
-      "Ошибка!\n",
-      "Кто был отцом Питера Квилла из Стражей Галактики?\n",
-      "\t1. планета\n",
-      "\t2. медуза\n",
-      "\t3. человек муравей\n",
-      "\t4. самолет\n",
-      "Верно! Ваш счет: 1 очков\n",
-      "Попробуйте еще раз\n"
-     ]
-    }
-   ],
-   "source": [
-    "opros = [\n",
-    "    {\"q\":\"Сколько персонажей в Марвеле?\",'var':[\"10\",\"34\",\"250\",\"474\"],'a':3},\n",
-    "    {'q':\"Как появился человек паук?\",\"var\":[\"отравился едой\",\"укусил паук\",'упал с лестницы'],'a':1},\n",
-    "    {'q':\"Кто был отцом Питера Квилла из Стражей Галактики?\",\"var\":['планета',\"медуза\",\"человек муравей\",\"самолет\"],\"a\":0}\n",
-    "]\n",
-    "score = 0\n",
-    "for i in opros:\n",
-    "    print(i['q'])\n",
-    "    num=1\n",
-    "    for j in i['var']:\n",
-    "        print(f\"\\t{num}. {j}\")\n",
-    "        num=num+1\n",
-    "    ans=int(input(\"Ваш ответ?\"))-1\n",
-    "    if ans==i[\"a\"]:\n",
-    "        score+=1\n",
-    "        print(f'Верно! Ваш счет: {score} очков')\n",
-    "    else:\n",
-    "        print(\"Ошибка!\")\n",
-    "if score>2:print(\"Вы победили!\")\n",
-    "else: print(\"Попробуйте еще раз\")"
+    "goods = { 'Лампа': '12345', 'Стол': '23456', 'Диван': '34567', 'Стул': '45678'}\n",
+    "store = { '12345': [ {'quantity': 27, 'price': 42}, ],\n",
+    "         '23456': [ {'quantity': 22, 'price': 510}, {'quantity': 32, 'price': 520}, ],\n",
+    "        '34567': [ {'quantity': 2, 'price': 1200}, {'quantity': 1, 'price': 1150}, ], \n",
+    "        '45678': [ {'quantity': 50, 'price': 100}, {'quantity': 12, 'price': 95}, {'quantity': 43, 'price': 97}, ]}\n",
+    "\n"
    ]
   }
  ],
@@ -154,7 +31,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.9 (default, Oct 26 2021, 07:25:54) \n[Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
