--- a/1.ipynb
+++ b/1.ipynb
@@ -64,6 +64,36 @@
     "        greeting()\n",
     "    print('Следующий.\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4//3=1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calc(x,y,op):\n",
+    "    if op ==\"+\":ans=x+y\n",
+    "    elif op=='-':ans=x-y\n",
+    "    elif op==\"*\":ans=x*y\n",
+    "    elif op==\"/\":ans=x/y\n",
+    "    elif op==\"%\":ans=x%y\n",
+    "    elif op==\"//\":ans=int(x/y)\n",
+    "    with open(\"math.log\",\"a\") as file:\n",
+    "        file.write(f\"{x}{op}{y}={ans}\\n\")\n",
+    "    print(f\"{x}{op}{y}={ans}\")\n",
+    "x=int(input(\"Введите число 1\"))\n",
+    "y=int(input(\"Введите число 2\"))\n",
+    "op=input(\"Введите + или -\")\n",
+    "calc(x,y,op)"
+   ]
   }
  ],
  "metadata": {
