--- a/widgets.ipynb
+++ b/widgets.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from  tkinter import *\n",
+    "from tkinter import messagebox\n",
     "def clicked():\n",
-    "    pass\n",
+    "    messagebox.showinfo(\"Header\",\"Button pressed\")\n",
     "\n",
     "window = Tk()\n",
     "window.title(\"mbox\")\n",
