--- a/widgets.ipynb
+++ b/widgets.ipynb
@@ -2,23 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from  tkinter import *\n",
+    "import random\n",
     "from tkinter import messagebox\n",
     "def clicked():\n",
-    "    messagebox.showinfo(\"Header\",\"Button pressed\")\n",
+    "    button_1.place(x=random.randint(1,100),y=405,width=100,height=30)\n",
     "\n",
     "window = Tk()\n",
+    "points=0\n",
     "window.title(\"mbox\")\n",
     "window.geometry(\"700x500\")\n",
     "window.attributes(\"-alpha\",0.95)\n",
     "window.attributes(\"-topmost\",True)\n",
     "button_1 = Button(text =\"Hello\",command=clicked)\n",
     "button_1.place(x=10,y=405,width=100,height=30)\n",
-    "text = Label(text=\"My first tkinter programm\",fg=\"green\",bg=\"pink\",\n",
+    "text = Label(text=,fg=\"green\",bg=\"pink\",\n",
     "            font = (\"Courier New\",34))\n",
     "text.place(x=0,y=0,width=450,height=300)\n",
     "window.mainloop()"
