--- a/widgets.ipynb
+++ b/widgets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,19 +10,59 @@
     "import random\n",
     "from tkinter import messagebox\n",
     "def clicked():\n",
-    "    button_1.place(x=random.randint(1,100),y=405,width=100,height=30)\n",
+    "    button_1.place(x=random.randint(1,600),y=random.randint(1,470),width=100,height=30)\n",
+    "    text[\"text\"]+=1\n",
     "\n",
     "window = Tk()\n",
     "points=0\n",
     "window.title(\"mbox\")\n",
-    "window.geometry(\"700x500\")\n",
+    "window.geometry(\"700x500+600+600\")\n",
     "window.attributes(\"-alpha\",0.95)\n",
     "window.attributes(\"-topmost\",True)\n",
     "button_1 = Button(text =\"Hello\",command=clicked)\n",
     "button_1.place(x=10,y=405,width=100,height=30)\n",
-    "text = Label(text=,fg=\"green\",bg=\"pink\",\n",
+    "text = Label(text=0,fg=\"black\",bg=\"white\",\n",
     "            font = (\"Courier New\",34))\n",
-    "text.place(x=0,y=0,width=450,height=300)\n",
+    "text.place(x=0,y=0,width=50,height=50)\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "import random\n",
+    "import time\n",
+    "window = Tk()\n",
+    "window.geometry('800x600')\n",
+    "window.title('Кликер')\n",
+    "points = 0\n",
+    "bg_values = ['black', 'red', 'green', 'blue', 'orange']\n",
+    "bg_index = 0\n",
+    " \n",
+    "def check():\n",
+    "    global points, bg_index\n",
+    "    b.place(x=random.randint(1, 550), y=random.randint(1, 500))\n",
+    "    points += 1\n",
+    "    label['text'] = points\n",
+    " \n",
+    "    if points % 20 == 0:\n",
+    "        bg_index = 0 if bg_index == len(bg_values) else bg_index + 1\n",
+    "        b['fg'] = bg_values[bg_index]\n",
+    "        time.sleep(2)\n",
+    "\n",
+    " \n",
+    "b = Button(text='нажми на меня!', font=('Arial', 16), fg='black', command=check)\n",
+    "b.place(x=150, y=100)\n",
+    "label = Label(text=points, font=('Arial', 16), fg='black')\n",
+    "label.place(x=10, y=10)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "window.mainloop()"
    ]
   }
