--- a/widgets.ipynb
+++ b/widgets.ipynb
@@ -29,6 +29,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "window = Tk()\n",
+    "window.geometry('700x500')\n",
+    "window.title('Самый сложный тест по вселенной Marvel')\n",
+    "facts = [\n",
+    "{'text': 'Человеческое имя Халка - Брюс Беннет', 'right': 1},\n",
+    "{'text': 'Уолт Дисней является создателем вселенной Marvel', 'right': 0},\n",
+    "{'text': 'До появления костюма супергероя, человек муравей занимался воровством ', 'right': 1},\n",
+    "{'text': 'Выдуманный город Дженоша является родиной Черной пантеры', 'right': 0}\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
