--- a/widgets.ipynb
+++ b/widgets.ipynb
@@ -29,11 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tkinter import *\n",
+    "def check():\n",
+    "    pass\n",
     "window = Tk()\n",
     "window.geometry('700x500')\n",
     "window.title('Самый сложный тест по вселенной Marvel')\n",
@@ -42,7 +44,23 @@
     "{'text': 'Уолт Дисней является создателем вселенной Marvel', 'right': 0},\n",
     "{'text': 'До появления костюма супергероя, человек муравей занимался воровством ', 'right': 1},\n",
     "{'text': 'Выдуманный город Дженоша является родиной Черной пантеры', 'right': 0}\n",
-    "]"
+    "]\n",
+    "cur_q=0\n",
+    "points=0\n",
+    "label_title = Label(text='Тестирование по вселенной Marvel',\n",
+    "                    font=('Arial',24), fg='white', bg='red')\n",
+    "label_title.place(width=700,height=50,x=0,y=0)\n",
+    "fact= Message(text=facts[cur_q][\"text\"],font=('Arial',14),width=680,borderwidth=0)\n",
+    "fact.configure(justify='center')\n",
+    "fact.place(x=10,y=70)\n",
+    "var = IntVar()\n",
+    "false = Radiobutton(text=\"Ложь\", variable=var, value=0)\n",
+    "false.place(x=10,y=120)\n",
+    "true = Radiobutton(text=\"Правла\", variable=var, value=1)\n",
+    "true.place(x=10,y=170)\n",
+    "b = Button(text=\"Ответить\",font=('Arial',24),command=check)\n",
+    "b.place(x=200,y=130)\n",
+    "window.mainloop()"
    ]
   },
   {
