--- a/widgets.ipynb
+++ b/widgets.ipynb
@@ -29,13 +29,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tkinter import *\n",
     "def check():\n",
-    "    pass\n",
+    "    global cur_q, points\n",
+    "    ans=var.get()\n",
+    "    if bool(ans) == facts[cur_q]['right']:\n",
+    "        points+=1\n",
+    "    if cur_q<len(facts)-1:\n",
+    "        cur_q+=1\n",
+    "        fact['text']=facts[cur_q][\"text\"]\n",
+    "    else:\n",
+    "        p_label=Label(text=f\"вы набрали {points} очков\",font=('Arial',34))\n",
+    "        p_label.place(x=0,y=0,width=700,height=250)\n",
     "window = Tk()\n",
     "window.geometry('700x500')\n",
     "window.title('Самый сложный тест по вселенной Marvel')\n",
