--- a/new.ipynb
+++ b/new.ipynb
@@ -2,12 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tkinter import *\n",
     "import time\n",
+    "def close(event=None):\n",
+    "    window.destroy()\n",
+    "def on_close():\n",
+    "    count_start()\n",
+    "def count_start():\n",
+    "    if count_text[\"text\"]>\n",
     "\n",
     "window = Tk()\n",
     "window.geometry(\"900x300\")\n",
@@ -15,7 +21,9 @@
     "window.config(bg='black')\n",
     "text = Label(text=\"Ваш ПК ЗАРАЖЕН\",fg=\"green\",bg=\"black\",font=(\"Courier New\",34))\n",
     "text.place(x=100,y=100,width=700,height=100)\n",
-    "\n",
+    "count_text = Label(text = 3,fg=\"green\",bg=\"black\",font=(\"Courier New\",34))\n",
+    "window.protocol(\"WM_DELETE_WINDOW\",on_close)\n",
+    "window.bind(\"<Escape>\",close)\n",
     "window.mainloop()"
    ]
   }
