--- a/new.ipynb
+++ b/new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,17 @@
     "def on_close():\n",
     "    count_start()\n",
     "def count_start():\n",
-    "    if count_text[\"text\"]>\n",
+    "    if count_text[\"text\"]>0:\n",
+    "        count_text[\"text\"]-=1\n",
+    "        count_text.place(x=250,y=25,width=400,height=100)\n",
+    "        window.after(1000,count_start)\n",
+    "    else:\n",
+    "        width = window.winfo_screenwidth()\n",
+    "        height = window.winfo_screenheight()\n",
+    "        window.geometry(str(width)+\"x\"+str(height))\n",
+    "        photo = PhotoImage(file=\"/Users/pattycha/code2035-2/skelet.gif\")\n",
+    "        label = Label(image=photo,bg=\"black\")\n",
+    "        label.place(width=width,height=height,x=0,y=0)\n",
     "\n",
     "window = Tk()\n",
     "window.geometry(\"900x300\")\n",
