--- a/new.ipynb
+++ b/new.ipynb
@@ -23,7 +23,46 @@
     "        window.geometry(str(width)+\"x\"+str(height))\n",
     "        photo = PhotoImage(file=\"/Users/pattycha/code2035-2/skelet.gif\")\n",
     "        label = Label(image=photo,bg=\"black\")\n",
+    "        label.image = photo\n",
     "        label.place(width=width,height=height,x=0,y=0)\n",
+    "\n",
+    "window = Tk()\n",
+    "window.geometry(\"900x300\")\n",
+    "window.resizable(width=False,height=False)\n",
+    "window.config(bg='black')\n",
+    "text = Label(text=\"Ваш ПК ЗАРАЖЕН\",fg=\"green\",bg=\"black\",font=(\"Courier New\",34))\n",
+    "text.place(x=100,y=100,width=700,height=100)\n",
+    "count_text = Label(text = 3,fg=\"green\",bg=\"black\",font=(\"Courier New\",34))\n",
+    "window.protocol(\"WM_DELETE_WINDOW\",on_close)\n",
+    "window.bind(\"<Escape>\",close)\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "import time\n",
+    "def close(event=None):\n",
+    "    window.destroy()\n",
+    "def on_close():\n",
+    "    count_start()\n",
+    "def count_start():\n",
+    "    if count_text[\"text\"]>0:\n",
+    "        count_text[\"text\"]-=1\n",
+    "        count_text.place(x=250,y=25,width=400,height=100)\n",
+    "        window.after(1000,count_start)\n",
+    "    else:\n",
+    "        window.wm_attributes('-fullscreen',True)\n",
+    "        window.overrideredirect(True)\n",
+    "        window.attributes('-topmost',True)\n",
+    "        photo = PhotoImage(file=\"/Users/pattycha/code2035-2/skelet.gif\")\n",
+    "        label = Label(image=photo,bg=\"black\")\n",
+    "        label.image = photo\n",
+    "        label.place(x=0,y=0)\n",
     "\n",
     "window = Tk()\n",
     "window.geometry(\"900x300\")\n",
