--- a/new.ipynb
+++ b/new.ipynb
@@ -75,6 +75,46 @@
     "window.bind(\"<Escape>\",close)\n",
     "window.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "import time\n",
+    "from PIL import ImageTk, Image\n",
+    "def close(event=None):\n",
+    "    window.destroy()\n",
+    "def on_close():\n",
+    "    count_start()\n",
+    "def count_start():\n",
+    "    if count_text[\"text\"]>0:\n",
+    "        count_text[\"text\"]-=1\n",
+    "        count_text.place(x=250,y=25,width=400,height=100)\n",
+    "        window.after(1000,count_start)\n",
+    "    else:\n",
+    "        window.wm_attributes('-fullscreen',True)\n",
+    "        window.overrideredirect(True)\n",
+    "        window.attributes('-topmost',True)\n",
+    "        photo = Image.open(\"/Users/pattycha/lessons/8 урок/123.jpg\")\n",
+    "        image = ImageTk.PhotoImage(photo)\n",
+    "        label = Label(image=image,bg=\"black\")\n",
+    "        label.image = photo\n",
+    "        label.place(x=0,y=0)\n",
+    "\n",
+    "window = Tk()\n",
+    "window.geometry(\"900x300\")\n",
+    "window.resizable(width=False,height=False)\n",
+    "window.config(bg='black')\n",
+    "text = Label(text=\"Ваш ПК ЗАРАЖЕН\",fg=\"green\",bg=\"black\",font=(\"Courier New\",34))\n",
+    "text.place(x=100,y=100,width=700,height=100)\n",
+    "count_text = Label(text = 3,fg=\"green\",bg=\"black\",font=(\"Courier New\",34))\n",
+    "window.protocol(\"WM_DELETE_WINDOW\",on_close)\n",
+    "window.bind(\"<Escape>\",close)\n",
+    "window.mainloop()"
+   ]
   }
  ],
  "metadata": {
