--- a/code.ipynb
+++ b/code.ipynb
@@ -30,8 +30,8 @@
     "    response=requests.get(\"https://i-fakt.ru/\")\n",
     "    html = BeautifulSoup(response.content,'html5')\n",
     "    fact = choice(html.find_all(class_=\"p-2 clearfix\"))\n",
-    "    print(fact.text)\n",
-    "    print(fact.a.attrs[\"href\"])\n",
+    "    return fact.text\n",
+    "\n",
     "get_interesting_fact()"
    ]
   },
