--- a/new_gui.ipynb
+++ b/new_gui.ipynb
@@ -2,9 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'coord': {'lon': 82.9344, 'lat': 55.0411}, 'weather': [{'id': 802, 'main': 'Clouds', 'description': 'переменная облачность', 'icon': '03n'}], 'base': 'stations', 'main': {'temp': -15.39, 'feels_like': -22.39, 'temp_min': -15.4, 'temp_max': -15.39, 'pressure': 1034, 'humidity': 72}, 'visibility': 10000, 'wind': {'speed': 5, 'deg': 190}, 'clouds': {'all': 40}, 'dt': 1674056049, 'sys': {'type': 1, 'id': 8958, 'country': 'RU', 'sunrise': 1674009687, 'sunset': 1674038105}, 'timezone': 25200, 'id': 1496747, 'name': 'Новосибирск', 'cod': 200}\n"
+     ]
+    },
     {
      "ename": "TclError",
      "evalue": "can't invoke \"wm\" command:  application has been destroyed",
@@ -12,17 +19,9 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTclError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/Users/pattycha/code2035-2/new_gui.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 27>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pattycha/code2035-2/new_gui.ipynb#W0sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pattycha/code2035-2/new_gui.ipynb#W0sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m     root\u001b[39m.\u001b[39mupdate()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/pattycha/code2035-2/new_gui.ipynb#W0sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     root\u001b[39m.\u001b[39;49mattributes(\u001b[39m'\u001b[39;49m\u001b[39m-topmost\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39mTrue\u001b[39;49;00m)\n",
+      "\u001b[1;32m/Users/pattycha/code2035-2/new_gui.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 74>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pattycha/code2035-2/new_gui.ipynb#W0sZmlsZQ%3D%3D?line=72'>73</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pattycha/code2035-2/new_gui.ipynb#W0sZmlsZQ%3D%3D?line=73'>74</a>\u001b[0m     root\u001b[39m.\u001b[39mupdate()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/pattycha/code2035-2/new_gui.ipynb#W0sZmlsZQ%3D%3D?line=74'>75</a>\u001b[0m     root\u001b[39m.\u001b[39;49mattributes(\u001b[39m'\u001b[39;49m\u001b[39m-topmost\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39mTrue\u001b[39;49;00m)\n",
       "File \u001b[0;32m/Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/tkinter/__init__.py:1976\u001b[0m, in \u001b[0;36mWm.wm_attributes\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1958\u001b[0m \u001b[39m\"\"\"This subcommand returns or sets platform specific attributes\u001b[39;00m\n\u001b[1;32m   1959\u001b[0m \n\u001b[1;32m   1960\u001b[0m \u001b[39mThe first form returns a list of the platform specific flags and\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1973\u001b[0m \u001b[39mOn Unix, there are currently no special attribute values.\u001b[39;00m\n\u001b[1;32m   1974\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   1975\u001b[0m args \u001b[39m=\u001b[39m (\u001b[39m'\u001b[39m\u001b[39mwm\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mattributes\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_w) \u001b[39m+\u001b[39m args\n\u001b[0;32m-> 1976\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtk\u001b[39m.\u001b[39;49mcall(args)\n",
       "\u001b[0;31mTclError\u001b[0m: can't invoke \"wm\" command:  application has been destroyed"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -38,6 +37,51 @@
     "    fact = random.choice(html.find_all(class_=\"p-2 clearfix\"))\n",
     "    return fact.text\n",
     "\n",
+    "def get_event():\n",
+    "    response=requests.get(\"https://kudago.com/msk/festival/\")\n",
+    "    html = BeautifulSoup(response.content,'html5')\n",
+    "    fact = random.choice(html.find_all(class_=\"post-title\"))\n",
+    "    return fact.text.strip()\n",
+    "\n",
+    "def get_humor():\n",
+    "    res = requests.get('https://www.anekdot.ru/random/anekdot/')\n",
+    "    res = res.content\n",
+    "    html = BeautifulSoup(res, 'lxml')\n",
+    "    return random.choice(html.find_all(class_='text')).text\n",
+    "\n",
+    "def get_holyday():\n",
+    "    res = requests.get('https://calend.online/holiday/')\n",
+    "    res = res.content\n",
+    "    html = BeautifulSoup(res, 'lxml')\n",
+    "    a=[li.text.strip() for li in html.select('li') if \"Праздники\" not in li.text]\n",
+    "    return(\"\\n\".join(a))\n",
+    "\n",
+    "def get_weather():\n",
+    "    ans=\"\"\n",
+    "    try:\n",
+    "        city_id = 1496747\n",
+    "        appid=\"336d96b279417cabdba8d4608cebced6\"\n",
+    "        res = requests.get(\"http://api.openweathermap.org/data/2.5/weather\",\n",
+    "                 params={'id': city_id, 'units': 'metric', 'lang': 'ru', 'APPID': appid})\n",
+    "        data = res.json()\n",
+    "        print(data)\n",
+    "        return \"\\n\".join([\"cyty:\"+data[\"name\"],\"tempreture:\"+str(data[\"main\"][\"temp\"])])\n",
+    "    except Exception as e:\n",
+    "        return (\"Exception (find):\", e)\n",
+    "\n",
+    "def get_data():\n",
+    "    try:\n",
+    "        res = requests.get('https://calend.online/holiday/')\n",
+    "        a=res.text.split(\"<h2>Праздники сегодня <small>полный список</small><\")[1].split(\"</ul>\")[0]\n",
+    "        a=a.split('<ul class=\"holidays-list\">')[1]\n",
+    "        a=a.split(\"<li>\\n\")\n",
+    "        a=[i.strip(' qwertyuiop[]asdfghjkl;\"zxcvbnm,./>/<=-\\t\\n') for i in a]\n",
+    "        a=[i.split(\"<\")[0] for i in a]\n",
+    "        a=[i.strip(' qwertyuiop[]asdfghjkl;\"zxcvbnm,./>/<=-\\t\\n') for i in a]\n",
+    "        a=\"\\n\".join(a)\n",
+    "    except Exception as e:\n",
+    "        return (\"Exception (find):\", e)\n",
+    "    return a\n",
     "\n",
     "def ex(event=None):\n",
     "    root.destroy()\n",
@@ -52,7 +96,7 @@
     "def printw(f):\n",
     "    txt.insert(1.0,f())\n",
     "\n",
-    "printw(get_interesting_fact)\n",
+    "printw( get_weather)\n",
     "\n",
     "while True:\n",
     "    root.update()\n",
