--- a/pdf.ipynb
+++ b/pdf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "''"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20,12 +20,12 @@
     "from fpdf import FPDF\n",
     "pdf = FPDF(\"P\",\"cm\",(10,15))\n",
     "pdf.add_page()\n",
-    "pdf.add_font(\"courier\",\"\",\"cour.ttf\",uni=True)\n",
+    "pdf.add_font(\"courier\",\"\",\"pobeda.ttf\",uni=True)\n",
     "pdf.set_font(\"courier\",size=16)\n",
     "pdf.set_text_color(0,255,0)\n",
     "pdf.set_fill_color(155,50,155)\n",
     "pdf.set_draw_color(255,0,0)\n",
-    "pdf.cell(8,5,txt=\"Hello!\",align=\"C\",border=1,fill=True)\n",
+    "pdf.cell(8,5,txt=\"Привет\",align=\"C\",fill=True)\n",
     "pdf.output('hello.pdf')"
    ]
   },
