--- a/pdf.ipynb
+++ b/pdf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "''"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,26 +26,37 @@
     "pdf.set_fill_color(155,50,155)\n",
     "pdf.set_draw_color(255,0,0)\n",
     "pdf.cell(8,5,txt=\"Привет\",align=\"C\",fill=True)\n",
+    "pdf.image('pic.jpg',h=10,w=10,x=0,y=5)\n",
     "pdf.output('hello.pdf')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: fpdf in /Users/pattycha/Library/Python/3.8/lib/python/site-packages (1.7.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pip install fpdf"
+    "from fpdf import *\n",
+    "pdf = FPDF (\"P\",\"cm\",(10,15))\n",
+    "pdf.add_page()\n",
+    "pdf.add_font(\"courier\",\"\",\"pobeda.ttf\",uni=True)\n",
+    "pdf.set_font(\"courier\",size=16)\n",
+    "pdf.set_text_color(0,255,0)\n",
+    "pdf.set_fill_color(155,50,155)\n",
+    "pdf.set_draw_color(255,0,0)\n",
+    "pdf.cell(8,5,txt=\"Hello!\",align=\"C\",border=1,fill=True)\n",
+    "pdf.output('hello.pdf')"
    ]
   }
  ],
