--- a/hw.ipynb
+++ b/hw.ipynb
@@ -2,39 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number = int(input(\"Введите число: \"))\n",
     "summ = 0\n",
     "while number != 0:\n",
     "    summ += number\n",
     "    number = int(input(\"Введите число: \"))\n",
-    "print(summ)"
+    "print(summ)\n",
+    "# =)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correct\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "correct=\"235\"\n",
     "user = input(\"Введите пароль:\\n\")\n",
