--- a/card.ipynb
+++ b/card.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "''"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,6 +40,9 @@
     "pdf.multi_cell(0,20,txt=message,align=\"C\")\n",
     "today=datetime.today().strftime(\"%d.%m.%Y\")\n",
     "pdf.cell(0,10,txt=today,align=\"R\",ln=1)\n",
+    "pdf.set_text_color(124,89,147)\n",
+    "author_name = input('Введите свое имя\\n')\n",
+    "pdf.cell(0, 10, txt=author_name, align=\"R\", ln=1)\n",
     "pdf.output(\"bday.pdf\")"
    ]
   }
