--- a/test.ipynb
+++ b/test.ipynb
@@ -2,25 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "import telebot\n",
     "token = \"5887799871:AAEKass2GpBSHVWUefXCRseiKHHzyBiY12s\"\n",
-    "bot = telebot.TeleBot(token)"
+    "bot = telebot.TeleBot(token)\n",
+    "@bot.message_handler(commands=[\"start\",\"help\"])\n",
+    "def send_welcome(message):\n",
+    "  welcome_txt=\"Привет, я умею рассказывать  интересные факты, писать стихи\"\n",
+    "  bot.send_message(message.chat.id,welcome_txt)\n",
+    "\n",
+    "bot.polling()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yeaha!\n"
+      "Yeaha!\n",
+      "0.03563499450683594\n"
      ]
     }
    ],
@@ -37,7 +44,7 @@
     "def work():\n",
     "    print(\"im working\")\n",
     "\n",
-    "#@my_decorator\n",
+    "@my_decorator\n",
     "def im_home():\n",
     "    for i in range(1000000):\n",
     "        if i!=2:pass\n",
