--- a/test.ipynb
+++ b/test.ipynb
@@ -2,17 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "import telebot\n",
+    "from bs4 import BeautifulSoup\n",
+    "import random\n",
+    "import requests\n",
     "token = \"5887799871:AAEKass2GpBSHVWUefXCRseiKHHzyBiY12s\"\n",
     "bot = telebot.TeleBot(token)\n",
     "@bot.message_handler(commands=[\"start\",\"help\"])\n",
     "def send_welcome(message):\n",
     "  welcome_txt=\"Привет, я умею рассказывать  интересные факты, писать стихи\"\n",
     "  bot.send_message(message.chat.id,welcome_txt)\n",
+    "@bot.message_handler(commands=[\"fact\"])\n",
+    "def send_fact(message):\n",
+    "    response = requests.get('https://i-fakt.ru/').content\n",
+    "    html = BeautifulSoup(response, 'lxml')\n",
+    "    fact = random.choice(html.find_all(class_='p-2 clearfix'))\n",
+    "    fact_link =  fact.a.attrs['href']\n",
+    "    bot.send_message(message.chat.id,fact_link)  \n",
     "\n",
     "bot.polling()\n"
    ]
