--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,12 @@
     "    html = BeautifulSoup(response, 'lxml')\n",
     "    fact = random.choice(html.find_all(class_='p-2 clearfix'))\n",
     "    fact_link =  fact.a.attrs['href']\n",
-    "    bot.send_message(message.chat.id,fact_link)  \n",
+    "    bot.send_message(message.chat.id,fact_link)\n",
+    "@bot.message_handler(commands=[\"cat\"])\n",
+    "def send_cat(message):\n",
+    "    cat_n = str(random.randint(1,10))+\".jpg\"\n",
+    "    img = open(cat_n,\"rb\")\n",
+    "    bot.send_photo(message.chat.id,img)\n",
     "\n",
     "bot.polling()\n"
    ]
