--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,35 @@
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-01-25 22:35:25,840 (__init__.py:1083 MainThread) ERROR - TeleBot: \"Threaded polling exception: A request to the Telegram API was unsuccessful. Error code: 409. Description: Conflict: terminated by other getUpdates request; make sure that only one bot instance is running\"\n",
+      "2023-01-25 22:35:25,845 (__init__.py:1085 MainThread) ERROR - TeleBot: \"Exception traceback:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/pattycha/Library/Python/3.8/lib/python/site-packages/telebot/__init__.py\", line 1073, in __threaded_polling\n",
+      "    polling_thread.raise_exceptions()\n",
+      "  File \"/Users/pattycha/Library/Python/3.8/lib/python/site-packages/telebot/util.py\", line 118, in raise_exceptions\n",
+      "    raise self.exception_info\n",
+      "  File \"/Users/pattycha/Library/Python/3.8/lib/python/site-packages/telebot/util.py\", line 100, in run\n",
+      "    task(*args, **kwargs)\n",
+      "  File \"/Users/pattycha/Library/Python/3.8/lib/python/site-packages/telebot/__init__.py\", line 649, in __retrieve_updates\n",
+      "    updates = self.get_updates(offset=(self.last_update_id + 1),\n",
+      "  File \"/Users/pattycha/Library/Python/3.8/lib/python/site-packages/telebot/__init__.py\", line 623, in get_updates\n",
+      "    json_updates = apihelper.get_updates(self.token, offset, limit, timeout, allowed_updates, long_polling_timeout)\n",
+      "  File \"/Users/pattycha/Library/Python/3.8/lib/python/site-packages/telebot/apihelper.py\", line 321, in get_updates\n",
+      "    return _make_request(token, method_url, params=payload)\n",
+      "  File \"/Users/pattycha/Library/Python/3.8/lib/python/site-packages/telebot/apihelper.py\", line 162, in _make_request\n",
+      "    json_result = _check_result(method_name, result)\n",
+      "  File \"/Users/pattycha/Library/Python/3.8/lib/python/site-packages/telebot/apihelper.py\", line 189, in _check_result\n",
+      "    raise ApiTelegramException(method_name, result, result_json)\n",
+      "telebot.apihelper.ApiTelegramException: A request to the Telegram API was unsuccessful. Error code: 409. Description: Conflict: terminated by other getUpdates request; make sure that only one bot instance is running\n",
+      "\"\n"
+     ]
+    }
+   ],
    "source": [
     "import telebot\n",
     "from bs4 import BeautifulSoup\n",
