--- a/new.ipynb
+++ b/new.ipynb
@@ -48,6 +48,27 @@
       "* - умножение\n",
       "/ - деление\n",
       "+ - сложение\n",
+      "- - вычитаение\n",
+      "wrong operation!\n",
+      " \n",
+      "Укажите интересующую вас операцию\n",
+      "* - умножение\n",
+      "/ - деление\n",
+      "+ - сложение\n",
+      "- - вычитаение\n",
+      "wrong operation!\n",
+      " \n",
+      "Укажите интересующую вас операцию\n",
+      "* - умножение\n",
+      "/ - деление\n",
+      "+ - сложение\n",
+      "- - вычитаение\n",
+      "3\n",
+      " \n",
+      "Укажите интересующую вас операцию\n",
+      "* - умножение\n",
+      "/ - деление\n",
+      "+ - сложение\n",
       "- - вычитаение\n"
      ]
     }
@@ -104,6 +125,7 @@
     "    else:\n",
     "        print(\"wrong operation!\")\n",
     "    print(\" \")\n",
+    "    \n",
     "    calc()\n",
     "calc()"
    ]
