--- a/parcers.ipynb
+++ b/parcers.ipynb
@@ -2,16 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'coord': {'lon': 82.9344, 'lat': 55.0411}, 'weather': [{'id': 711, 'main': 'Smoke', 'description': 'дымка', 'icon': '50n'}], 'base': 'stations', 'main': {'temp': -13.39, 'feels_like': -18.05, 'temp_min': -13.39, 'temp_max': -13.39, 'pressure': 1027, 'humidity': 85}, 'visibility': 7000, 'wind': {'speed': 2, 'deg': 170}, 'clouds': {'all': 100}, 'dt': 1675175077, 'sys': {'type': 1, 'id': 8958, 'country': 'RU', 'sunrise': 1675131732, 'sunset': 1675162852}, 'timezone': 25200, 'id': 1496747, 'name': 'Новосибирск', 'cod': 200}\n"
-     ]
-    },
     {
      "ename": "TclError",
      "evalue": "can't invoke \"wm\" command:  application has been destroyed",
@@ -91,7 +84,7 @@
     "def printw(f):\n",
     "    txt.insert(1.0,f())\n",
     "\n",
-    "printw(get_weather)\n",
+    "printw(get_data)\n",
     "\n",
     "while True:\n",
     "    root.update()\n",
@@ -115,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.9 (default, Oct 26 2021, 07:25:54) \n[Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
