--- a/parcers.ipynb
+++ b/parcers.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'coord': {'lon': 82.9344, 'lat': 55.0411}, 'weather': [{'id': 711, 'main': 'Smoke', 'description': 'дымка', 'icon': '50n'}], 'base': 'stations', 'main': {'temp': -13.39, 'feels_like': -18.05, 'temp_min': -13.39, 'temp_max': -13.39, 'pressure': 1027, 'humidity': 85}, 'visibility': 7000, 'wind': {'speed': 2, 'deg': 170}, 'clouds': {'all': 100}, 'dt': 1675175077, 'sys': {'type': 1, 'id': 8958, 'country': 'RU', 'sunrise': 1675131732, 'sunset': 1675162852}, 'timezone': 25200, 'id': 1496747, 'name': 'Новосибирск', 'cod': 200}\n"
+      "{'coord': {'lon': 82.9344, 'lat': 55.0411}, 'weather': [{'id': 701, 'main': 'Mist', 'description': 'туман', 'icon': '50n'}], 'base': 'stations', 'main': {'temp': -21.39, 'feels_like': -27.37, 'temp_min': -21.39, 'temp_max': -20.96, 'pressure': 1028, 'humidity': 77}, 'visibility': 5000, 'wind': {'speed': 2, 'deg': 290}, 'clouds': {'all': 12}, 'dt': 1675347026, 'sys': {'type': 1, 'id': 8958, 'country': 'RU', 'sunrise': 1675304319, 'sunset': 1675335903}, 'timezone': 25200, 'id': 1496747, 'name': 'Новосибирск', 'cod': 200}\n"
      ]
     },
     {
@@ -19,7 +19,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTclError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/Users/pattycha/code2035-2/parcers.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 68>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pattycha/code2035-2/parcers.ipynb#W0sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pattycha/code2035-2/parcers.ipynb#W0sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m     root\u001b[39m.\u001b[39mupdate()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/pattycha/code2035-2/parcers.ipynb#W0sZmlsZQ%3D%3D?line=68'>69</a>\u001b[0m     root\u001b[39m.\u001b[39;49mattributes(\u001b[39m'\u001b[39;49m\u001b[39m-topmost\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39mTrue\u001b[39;49;00m)\n",
+      "\u001b[1;32m/Users/pattycha/code2035/parcers.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 68>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pattycha/code2035/parcers.ipynb#W0sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pattycha/code2035/parcers.ipynb#W0sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m     root\u001b[39m.\u001b[39mupdate()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/pattycha/code2035/parcers.ipynb#W0sZmlsZQ%3D%3D?line=68'>69</a>\u001b[0m     root\u001b[39m.\u001b[39;49mattributes(\u001b[39m'\u001b[39;49m\u001b[39m-topmost\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39mTrue\u001b[39;49;00m)\n",
       "File \u001b[0;32m/Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/tkinter/__init__.py:1976\u001b[0m, in \u001b[0;36mWm.wm_attributes\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1958\u001b[0m \u001b[39m\"\"\"This subcommand returns or sets platform specific attributes\u001b[39;00m\n\u001b[1;32m   1959\u001b[0m \n\u001b[1;32m   1960\u001b[0m \u001b[39mThe first form returns a list of the platform specific flags and\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1973\u001b[0m \u001b[39mOn Unix, there are currently no special attribute values.\u001b[39;00m\n\u001b[1;32m   1974\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   1975\u001b[0m args \u001b[39m=\u001b[39m (\u001b[39m'\u001b[39m\u001b[39mwm\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mattributes\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_w) \u001b[39m+\u001b[39m args\n\u001b[0;32m-> 1976\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtk\u001b[39m.\u001b[39;49mcall(args)\n",
       "\u001b[0;31mTclError\u001b[0m: can't invoke \"wm\" command:  application has been destroyed"
      ]
@@ -97,6 +97,13 @@
     "    root.update()\n",
     "    root.attributes('-topmost', True)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
