--- a/zagotovka.ipynb
+++ b/zagotovka.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,9 +41,43 @@
     "    cat_img = open('img/' + cat_number + '.jpg', 'rb')\n",
     "    bot.send_photo(message.chat.id, cat_img)\n",
     "\n",
+    "@bot.message_handler(commands=['musik'])\n",
+    "def send_cat(message):\n",
+    "\n",
+    "    mus = open(\"happy.mp3\", 'rb')\n",
+    "    bot.send_(message.chat.id, mus)\n",
+    "\n",
     "\n",
     "bot.polling()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'win' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/pattycha/code2035/zagotovka.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/pattycha/code2035/zagotovka.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m win\u001b[39m+\u001b[39mr\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'win' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pyTelegramBotAPI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
